// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-2 el-multi-select"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-2 el-multi-select"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectChip > should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-id"
        type="checkbox"
      />
      <label
        class="mocked-styled-1 el-multi-select-label"
        for="test-id"
        role="option"
      >
        <span>
          Some Value
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      aria-hidden="true"
      class="mocked-styled-0 el-multi-select-checkbox"
      id="test-id"
      type="checkbox"
    />
    <label
      class="mocked-styled-1 el-multi-select-label"
      for="test-id"
      role="option"
    >
      <span>
        Some Value
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectInput > should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-6 el-multi-select-input-wrapper"
      >
        <input
          class="mocked-styled-5 el-multi-select-input"
          id="react-example"
        />
        <div
          aria-label="Multi selected options"
          class="mocked-styled-3 el-multi-select-selected"
          role="listbox"
        >
          <input
            aria-checked="true"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="multi-select-chip-item-one"
            role="option"
            type="checkbox"
          />
          <label
            class="mocked-styled-1 el-multi-select-label"
            for="multi-select-chip-item-one"
            role="option"
            tabindex="0"
          >
            Item one
          </label>
        </div>
        <div
          aria-label="Multi unselected options"
          class="mocked-styled-4 el-multi-select-un-selected"
          role="listbox"
        >
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            Item two
          </label>
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            Item three
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-6 el-multi-select-input-wrapper"
    >
      <input
        class="mocked-styled-5 el-multi-select-input"
        id="react-example"
      />
      <div
        aria-label="Multi selected options"
        class="mocked-styled-3 el-multi-select-selected"
        role="listbox"
      >
        <input
          aria-checked="true"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="multi-select-chip-item-one"
          role="option"
          type="checkbox"
        />
        <label
          class="mocked-styled-1 el-multi-select-label"
          for="multi-select-chip-item-one"
          role="option"
          tabindex="0"
        >
          Item one
        </label>
      </div>
      <div
        aria-label="Multi unselected options"
        class="mocked-styled-4 el-multi-select-un-selected"
        role="listbox"
      >
        <input
          aria-checked="false"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="test-static-id"
          role="option"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
          role="option"
          tabindex="0"
        >
          Item two
        </label>
        <input
          aria-checked="false"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="test-static-id"
          role="option"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
          role="option"
          tabindex="0"
        >
          Item three
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectInput > should match a snapshot and render non selected message where there are no selected items 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-6 el-multi-select-input-wrapper"
      >
        <input
          class="mocked-styled-5 el-multi-select-input"
          id="react-example"
        />
        <div
          aria-label="Multi selected options"
          class="mocked-styled-3 el-multi-select-selected"
          role="listbox"
        >
          <span
            class="el-ml2 el-intent-default el-icon"
          />
          <p>
            No items selected
          </p>
        </div>
        <div
          aria-label="Multi unselected options"
          class="mocked-styled-4 el-multi-select-un-selected"
          role="listbox"
        >
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            Item one
          </label>
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            Item two
          </label>
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-0 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            Item three
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-6 el-multi-select-input-wrapper"
    >
      <input
        class="mocked-styled-5 el-multi-select-input"
        id="react-example"
      />
      <div
        aria-label="Multi selected options"
        class="mocked-styled-3 el-multi-select-selected"
        role="listbox"
      >
        <span
          class="el-ml2 el-intent-default el-icon"
        />
        <p>
          No items selected
        </p>
      </div>
      <div
        aria-label="Multi unselected options"
        class="mocked-styled-4 el-multi-select-un-selected"
        role="listbox"
      >
        <input
          aria-checked="false"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="test-static-id"
          role="option"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
          role="option"
          tabindex="0"
        >
          Item one
        </label>
        <input
          aria-checked="false"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="test-static-id"
          role="option"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
          role="option"
          tabindex="0"
        >
          Item two
        </label>
        <input
          aria-checked="false"
          aria-hidden="true"
          class="mocked-styled-0 el-multi-select-checkbox"
          id="test-static-id"
          role="option"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
          role="option"
          tabindex="0"
        >
          Item three
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectSelected > should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-3 el-multi-select-selected"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-3 el-multi-select-selected"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectUnSelected > should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-4 el-multi-select-un-selected"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-4 el-multi-select-un-selected"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
